# tensor-hub

./: .gitignore  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  tflite_minimal.h  whisper_decoder.cpp  whisper_decoder.h  whisper_jni.cpp
app/src/main/java/com/taoleeeee/tensorhub/inference/: AudioDecoder.kt  EmbeddingInference.kt  MelSpectrogram.kt  WhisperNative.kt  WhisperTokenizer.kt  WhisperTranscription.kt
app/src/main/java/com/taoleeeee/tensorhub/model/: ModelConfig.kt  ModelManager.kt
app/src/main/java/com/taoleeeee/tensorhub/server/: TensorHubHttpServer.kt
app/src/main/java/com/taoleeeee/tensorhub/server/routes/: AudioRoutes.kt  ModelRoutes.kt
gradle/: libs.versions.toml
